fix spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,9 +11,7 @@ input{
   width: 100%;
 }
 
-
 button,
-div,
 form {
   margin: 10px;
 }
@@ -23,14 +21,7 @@ body {
   font-weight: 400;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 700;
-}
+
 
 /* Shared custom styles for headers */
 .header,
@@ -57,4 +48,9 @@ h6 {
 
 .project-today {
   background-color: var(--lightyellow);
+}
+
+#more-weather-days p{
+  font-weight: 200;
+  font-family:'Red Hat Display';
 }
